12627
It's surprising, but this has nothing to do with Java or eta-expansion:
{code}
scala> trait Foo[T]
defined trait Foo

scala> def myEmptyFoo[T](): Foo[T] = ???
myEmptyFoo: [T]()Foo[T]

scala> myEmptyFoo: Foo[String]
<console>:42: error: polymorphic expression cannot be instantiated to expected type;
 found   : [T]()Foo[T]
 required: Foo[String]
       myEmptyFoo: Foo[String]
       ^
{code}
